<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:com.xbox="http://schemas.android.com/apk/res-auto">
    
    <item android:id="@+id/options_take_photo"
		android:icon="@drawable/options_take_photo"
   	  	android:title="@string/photo_gallery_take_photo"
   	  	com.xbox:showAsAction="always"/>
    
    <item android:id="@+id/options_select_photo"
		android:icon="@drawable/options_filter_sort"
   	  	android:title="@string/photo_gallery_select_photo"
   	  	com.xbox:showAsAction="always"/>
    
    <item android:icon="@drawable/options_more_options"
        android:title="@string/options_more_options"
        com.xbox:showAsAction="always">
    	
    	<menu>
    	    
	    	<group android:id="@+id/options_more_options">
	    	    
	      		<item android:id="@+id/options_summary"
	          	  	android:title="@string/options_summary"/>
	      		
	      		<item android:id="@+id/options_export"
	          	  	android:title="@string/file_selector_export"/>
	      		
	      		<item android:id="@+id/options_import"
	          	  	android:title="@string/file_selector_import"/>
	      
	      		<item android:id="@+id/options_config"
	          	  	android:title="@string/options_config"/>
	      		
        	</group>
        	
        </menu>
        
    </item>
    
</menu>